--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.3.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.15",
     "validator": "^13.12.0"
   },
   "devDependencies": {
